--- a/Features/Calendar/CalendarRootView.xaml
+++ b/Features/Calendar/CalendarRootView.xaml
@@ -1,21 +1,61 @@
 ﻿<controls:AdonisWindow x:Class="F1Desktop.Features.Calendar.CalendarRootView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:F1Desktop.Features.Calendar"
-        xmlns:controls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
-        xmlns:s="https://github.com/canton7/Stylet"
-        mc:Ignorable="d"
-        Title="Calendar" 
-        Height="450" 
-        Width="800"
-        ShowActivated="False"
-        ShowInTaskbar="False"
-        Focusable="True"
-        Deactivated="{s:Action FocusLost}"
-        ResizeMode="NoResize">
-    <Grid>
-        
-    </Grid>
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                       xmlns:local="clr-namespace:F1Desktop.Features.Calendar"
+                       xmlns:s="https://github.com/canton7/Stylet"
+                       xmlns:controls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
+                       xmlns:extensions="clr-namespace:AdonisUI.Extensions;assembly=AdonisUI"
+                       xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+                       mc:Ignorable="d"
+                       d:DataContext="{d:DesignInstance local:CalendarRootViewModel}"
+                       Title="Calendar"
+                       Height="450"
+                       Width="800"
+                       ShowActivated="False"
+                       ShowInTaskbar="False"
+                       Focusable="True"
+                       Deactivated="{s:Action FocusLost}"
+                       ResizeMode="NoResize">
+        <ItemsControl ItemsSource="{Binding Races}"
+                      AlternationCount="2">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Border x:Name="Border"
+                            BorderThickness="0"
+                            Margin="0 5 0 5">
+                        <ContentControl s:View.Model="{Binding}" />
+                    </Border>
+                    <DataTemplate.Triggers>
+                        <Trigger Property="ItemsControl.AlternationIndex" Value="0">
+                            <Setter TargetName="Border" Property="Background" 
+                                    Value="{DynamicResource {x:Static adonisUi:Brushes.Layer3BackgroundBrush}}"/>
+                        </Trigger>
+                        <Trigger Property="ItemsControl.AlternationIndex" Value="1">
+                            <Setter TargetName="Border" Property="Background" 
+                                    Value="{DynamicResource {x:Static adonisUi:Brushes.Layer4BackgroundBrush}}"/>
+                        </Trigger>
+                    </DataTemplate.Triggers>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+            <ItemsControl.Template>
+                <ControlTemplate TargetType="ItemsControl">
+                    <Border BorderThickness="{TemplateBinding BorderThickness}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            Background="{TemplateBinding Background}">
+                        <ScrollViewer CanContentScroll="False" 
+                                      Padding="{TemplateBinding Padding}"
+                                      Focusable="False">
+                            <ItemsPresenter />
+                        </ScrollViewer>
+                    </Border>
+                </ControlTemplate>
+            </ItemsControl.Template>
+        </ItemsControl>
 </controls:AdonisWindow>
