--- a/Features/Root/RootView.xaml
+++ b/Features/Root/RootView.xaml
@@ -4,19 +4,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:F1Desktop.Features.Root"
-        xmlns:controls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
         xmlns:tb="http://www.hardcodet.net/taskbar"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         xmlns:s="https://github.com/canton7/Stylet"
+        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+        xmlns:controls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
         x:Name="Root"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:RootViewModel}"
         Height="0"
         Width="0"
+        Visibility="Hidden"
         ShowActivated="False"
         ShowInTaskbar="False"
         WindowStyle="None">
-    <tb:TaskbarIcon>
+    <tb:TaskbarIcon IconSource="pack://application:,,,/f1.ico">
         <tb:TaskbarIcon.ContextMenu>
             <ContextMenu>
                 <MenuItem Header="Calendar" 
