--- a/Features/Calendar/RaceView.xaml
+++ b/Features/Calendar/RaceView.xaml
@@ -9,7 +9,7 @@
              d:DataContext="{d:DesignInstance local:RaceViewModel}"
              Style="{StaticResource {x:Type Expander}}">
     <Expander.Header>
-        <TextBlock Text="{Binding Name}"/>
+        <TextBlock Text="{Binding Name}" FontSize="15"/>
     </Expander.Header>
     <TextBlock Text="{Binding Test}" FontSize="20"/>
 </Expander>
