--- a/App.xaml
+++ b/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:s="https://github.com/canton7/Stylet"
-             xmlns:misc="clr-namespace:F1Desktop.Misc">
+             xmlns:misc="clr-namespace:F1Desktop.Misc"
+             xmlns:converters="clr-namespace:F1Desktop.Converters">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -14,6 +15,10 @@
                 <ResourceDictionary Source="pack://application:,,,/AdonisUI;component/ColorSchemes/Dark.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/AdonisUI.ClassicTheme;component/Resources.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/Resources/Resources.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Controls/Controls.xaml"/>
+                <ResourceDictionary>
+                    <converters:IntThresholdConverter x:Key="IntThreshold"/>
+                </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
