--- a/Features/Calendar/RaceView.xaml
+++ b/Features/Calendar/RaceView.xaml
@@ -6,24 +6,30 @@
           xmlns:local="clr-namespace:F1Desktop.Features.Calendar"
           xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
           xmlns:s="https://github.com/canton7/Stylet"
+          xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+          xmlns:behaviours="clr-namespace:F1Desktop.Behaviours"
           mc:Ignorable="d"
           d:DataContext="{d:DesignInstance local:RaceViewModel}"
           Style="{StaticResource {x:Type Expander}}"
-          IsExpanded="{Binding IsNextRace, Mode=OneTime}">
+          IsExpanded="{Binding IsNext, Mode=OneTime}">
     <Expander.Header>
         <Grid Margin="0 10 0 10"
               HorizontalAlignment="{Binding HorizontalAlignment, RelativeSource={RelativeSource AncestorType=ContentPresenter}, Mode=OneWayToSource}">
+            <!-- TODO: Fix this, for some reason the grid isn't bubbling events... -->
+            <i:Interaction.Behaviors>
+                <behaviours:BubbleScrollEvent/>
+            </i:Interaction.Behaviors>
             <Grid.Resources>
                 <Style TargetType="TextBlock">
                     <Setter Property="FontSize" Value="16" />
-                    <Setter Property="FontFamily" Value="{StaticResource F1Regular}"/>
+                    <Setter Property="FontFamily" Value="{StaticResource F1Font}"/>
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding IsNextRace}" Value="True">
+                        <DataTrigger Binding="{Binding IsNext}" Value="True">
                             <Setter Property="FontWeight" Value="Bold" />
                             <Setter Property="Foreground"
                                     Value="{DynamicResource {x:Static adonisUi:Brushes.AlertBrush}}" />
                         </DataTrigger>
-                        <DataTrigger Binding="{Binding IsNextRace}" Value="False">
+                        <DataTrigger Binding="{Binding IsNext}" Value="False">
                             <Setter Property="FontWeight" Value="Regular" />
                         </DataTrigger>
                     </Style.Triggers>
@@ -36,7 +42,7 @@
             </Grid.ColumnDefinitions>
             <TextBlock Text="{Binding Name}"
                        Grid.Column="0" />
-            <TextBlock Text="{Binding DateTime.LocalDateTime, StringFormat={}{0:ddd\, d MMMM}}"
+            <TextBlock Text="{Binding SessionTime.LocalDateTime, StringFormat={}{0:ddd\, d MMMM}}"
                        HorizontalAlignment="Stretch"
                        TextAlignment="Center"
                        Grid.Column="1" />
